quotes carousel sync with logos + quick spacing fix

--- a/src/style.css
+++ b/src/style.css
@@ -248,6 +248,28 @@ body:not(:has(.navbar-toggle:checked)) {
     @apply bg-yellow;
   }
 }
+.carousel--quotes__logos {
+  @apply max-w-full md:max-w-[47.5rem] mx-auto relative px-8;
+  --slide-height: 19rem;
+  --slide-spacing: 2.5rem;
+  --slide-size: auto;
+
+  .carousel__viewport {
+    @apply overflow-hidden;
+  }
+  .carousel__container {
+    @apply flex;
+    backface-visibility: hidden;
+    touch-action: pan-y pinch-zoom;
+    margin-left: calc(var(--slide-spacing) * -1);
+  }
+  .carousel__slide {
+    @apply text-[1.125rem]/[1.6875rem] sm:text-[1.5rem]/[2.25rem] md:text-h4/h4  font-medium font-sans;
+    flex: 0 0 var(--slide-size);
+    min-width: 0;
+    padding-left: var(--slide-spacing);
+  }
+}
 
 .input {
   @apply bg-black border border-white/70  rounded-lg py-3 px-4 text-white placeholder:text-white/70 focus-visible:invalid:border-error focus-visible:invalid:text-error disabled:opacity-20 outline-none text-p1/p1 transition-none;
@@ -480,25 +502,28 @@ body:not(:has(.navbar-toggle:checked)) {
 }
 
 .card-case {
-  @apply relative flex flex-col items-start justify-center bg-gray text-dark rounded-10 px-6 sm:px-8 overflow-clip text-p2/p2 min-h-[7.5rem];
+  @apply relative flex flex-col items-start justify-center bg-gray text-dark rounded-10 px-6 sm:px-8 overflow-clip text-p2/p2 min-h-[7.5rem] transition-all;
 
  &__header {
-  @apply space-y-4 mt-6 sm:mt-8 mb-8 sm:mb-12;
+  @apply space-y-4 mt-6 sm:mt-8 mb-8 sm:mb-12 z-10;
  }
  &__footer {
   @apply flex justify-between items-center w-full my-2 sm:my-5 gap-4;
+ }
+ img {
+  @apply rounded-10 w-full object-cover mb-5;
  }
  hr {
   @apply bg-black w-full opacity-10;
  }
   &__image {
-    @apply absolute inset-0 w-full h-full object-cover;
+    @apply absolute bottom-[-10%] w-full object-cover text-dark/[7%] transition-all;
   }
   &__container {
     @apply absolute inset-0 pointer-events-none;
   }
   button {
-    @apply text-p2/p2 font-semibold z-10;
+    @apply text-p2/p2 font-semibold z-10 text-dark transition-all;
   }
   .badge-group {
     @apply flex items-center gap-4;
@@ -507,14 +532,17 @@ body:not(:has(.navbar-toggle:checked)) {
     }
   }
 
-  &--dark {
+  &:hover {
     @apply bg-dark text-white;
-    .card-case__number {
-      @apply text-[#D9D9D9]  opacity-20;
+    .card-case__image {
+      @apply text-white/[10%];
+    }
+    button {
+      @apply text-yellow;
     }
   }
 }
 
 .badge {
-  @apply rounded-full border border-black inline-flex gap-2 py-2 px-4 text-black text-[0.75rem]/[1.125rem];
+  @apply rounded-full border bg-white border-black inline-flex gap-2 py-2 px-4 text-black text-[0.75rem]/[1.125rem];
 }
